code25_all/swift/24079140.txt
let foo = { () -> (foo:Int, bar:Int) in return (1, 2) }()

foo.bar
swift
<REPL>:28:1: error: 'Int' does not have a member named 'bar'
foo.bar
^   ~~~

